--- a/SHIVAM.css
+++ b/SHIVAM.css
@@ -21,7 +21,7 @@ img
 
 h1, h2, h3, h4, h5, h6
 { font: normal 175% 'century gothic', arial, sans-serif;
-  color: #43423F;
+  color: #B60000;
   margin: 0 0 15px 0;
   padding: 15px 0 5px 0;}
 
